<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="@dimen/space_lg">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Lexicon.Title" />

            <TextView
                android:id="@+id/cefrText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_lg"
                android:textAppearance="@style/TextAppearance.Lexicon.Body" />

            <TextView
                android:id="@+id/streakText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xs"
                android:textAppearance="@style/TextAppearance.Lexicon.Body" />

            <TextView
                android:id="@+id/dueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xs"
                android:textAppearance="@style/TextAppearance.Lexicon.Body" />

            <TextView
                android:id="@+id/marksText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xs"
                android:textAppearance="@style/TextAppearance.Lexicon.Body" />

            <Button
                android:id="@+id/resumeRunButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xl"
                android:visibility="gone"
                android:text="@string/hub_btn_resume_run" />

            <Button
                android:id="@+id/practiceButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:text="@string/hub_btn_practice" />

            <Button
                android:id="@+id/realmButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:text="@string/hub_btn_realm" />

            <Button
                android:id="@+id/libraryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:text="@string/hub_btn_library" />

            <Button
                android:id="@+id/shopButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:text="@string/hub_btn_shop" />

            <Button
                android:id="@+id/statsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:text="@string/hub_btn_stats" />

            <Button
                android:id="@+id/settingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:text="@string/hub_btn_settings" />

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@drawable/scanlines"
        android:clickable="false"
        android:focusable="false"
        android:importantForAccessibility="no" />

</FrameLayout>
