<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    android:padding="@dimen/space_lg">

    <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Lexicon.Dim" />

    <TextView
        android:id="@+id/emptyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xl"
        android:gravity="center"
        android:visibility="gone"
        android:textAppearance="@style/TextAppearance.Lexicon.Body" />

    <LinearLayout
        android:id="@+id/cardGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/wordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xl"
            android:textAppearance="@style/TextAppearance.Lexicon.Title" />

        <LinearLayout
            android:id="@+id/answerGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/definitionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_md"
                android:textAppearance="@style/TextAppearance.Lexicon.Body" />

            <TextView
                android:id="@+id/exampleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:textAppearance="@style/TextAppearance.Lexicon.Mono" />

            <TextView
                android:id="@+id/glossText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:textAppearance="@style/TextAppearance.Lexicon.Dim" />

            <Button
                android:id="@+id/speakButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:visibility="gone"
                android:text="@string/practice_speak" />

        </LinearLayout>

        <Button
            android:id="@+id/showAnswerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:text="@string/practice_show_answer" />

        <LinearLayout
            android:id="@+id/ratingRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="4">

            <Button
                android:id="@+id/againButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rating_again" />

            <Button
                android:id="@+id/hardButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rating_hard" />

            <Button
                android:id="@+id/goodButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rating_good" />

            <Button
                android:id="@+id/easyButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rating_easy" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
